# UARTMatrix

./: Cargo.toml  README.md  ferris.tga  openocd.cfg  openocd.gdb  rust-toolchain.toml  serial_test.py
hub75-umx/: Cargo.toml  README.md
hub75-umx/src/: lib.rs
src/: command_interpreter.rs  crc.rs  display.rs  main.rs  uart.rs
src/display/: direct_display.rs  font.rs  text_animations.rs  text_display.rs
