[package]
name = "UARTMatrix"
version = "0.1.0"
authors = ["Kacper Leśniański <kacper.lesnianski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-semihosting = "0.5.6"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "medium", "rt"] }
