[package]
name = "UARTMatrix"
version = "0.1.0"
authors = ["Kacper Leśniański <kacper.lesnianski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.3"
embedded-hal = "0.2.3"
nb = "1.0.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.3.7"
usb-device = "0.2.3"
usbd-serial = "0.1.0"
stm32f1xx-hal = { version="0.7.0", features=["stm32f103", "medium", "rt", "stm32-usbd"] }
hub75 = { git="https://github.com/PawelLawrynowicz/hub75-rs", branch="experiments", features=["stripe-multiplexing"] }
tinytga = {version = "0.3.2", features=["graphics"]}
embedded-graphics = "0.6.2"

[profile.dev]
debug = 1
opt-level = 'z'
lto = true # Link-time-optimizations for further size reduction

[profile.release]
debug = 0
opt-level = 's'
lto = true # Link-time-optimizations for further size reduction
